corrected the desktop view to remove overflow

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     background-color: var(--secondary);
     color: var(--primary);
     width: 100vw;
+    margin: 0;
 }
 
 header {
@@ -134,6 +135,7 @@ aside {
     border-radius: .3rem;
     background-color: var(--secondaryD);
     color: var(--lightD);
+    cursor: pointer;
 }
 
 @media (max-width: 520px) {
